# spat.ai

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
data/: champions.json
data/meta/: comps.json
scripts/: fetch-templates.py  update-meta.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/tft-advisor/: Cargo.toml
src-tauri/crates/tft-advisor/src/: lib.rs
src-tauri/crates/tft-capture/: Cargo.toml
src-tauri/crates/tft-capture/src/: lib.rs  video.rs
src-tauri/crates/tft-data/: Cargo.toml
src-tauri/crates/tft-data/src/: lib.rs
src-tauri/crates/tft-state/: Cargo.toml
src-tauri/crates/tft-state/src/: lib.rs
src-tauri/crates/tft-vision/: Cargo.toml
src-tauri/crates/tft-vision/src/: champion_matcher.rs  digit_reader.rs  game_area.rs  layout.rs  lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pipeline.rs
src-tauri/src/commands/: capture.rs
src/components/companion/: CaptureStatusPanel.tsx  CompanionWindow.tsx  EconomyPanel.tsx  ShopPanel.tsx  WindowPicker.tsx
src/components/overlay/: OverlayWindow.tsx
src/hooks/: index.ts  useAdvice.ts  useCaptureEvents.ts  useGameState.ts  useSettings.ts
src/types/: advice.ts  game.ts  index.ts
