[package]
name = "tft-vision"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tft-data = { path = "../tft-data" }
tft-capture = { path = "../tft-capture" }
tracing-subscriber = { version = "0.3", optional = true }

[features]
cli = ["tracing-subscriber"]

[[bin]]
name = "analyze_frame"
required-features = ["cli"]
